fix: add build command

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "author": "Christopher_Ramos <Cramos7114@gmail.com>",
   "license": "MIT",
+  "scripts":{
+    "build": "gatsby build"
+  },
   "dependencies": {
     "@reach/dialog": "^0.10.5",
     "@reach/tabs": "^0.10.5",
